migrator-tests/tests/snapshots/generate__oneway_migrations-10.snap
---
source: migrator-tests/tests/generate.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON eats TYPE datetime",
        "id": "DEFINE FIELD id ON eats TYPE record<eats>",
        "in": "DEFINE FIELD in ON eats TYPE record",
        "out": "DEFINE FIELD out ON eats TYPE record",
        "place": "DEFINE FIELD place ON eats TYPE string",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
