migrator-tests/tests/snapshots/generate__oneway_migrations-14.snap
---
source: migrator-tests/tests/generate.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON planet TYPE datetime",
        "firstName": "DEFINE FIELD firstName ON planet TYPE string",
        "id": "DEFINE FIELD id ON planet TYPE record<planet>",
        "labels": "DEFINE FIELD labels ON planet TYPE array<string>",
        "population": "DEFINE FIELD population ON planet TYPE int",
        "updatedAt": "DEFINE FIELD updatedAt ON planet TYPE datetime",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
