migrator-tests/tests/snapshots/generate__oneway_migrations-15.snap
---
source: migrator-tests/tests/generate.rs
expression: "fields_info.as_ref().unwrap().values().map(|v|\n                v.keys().map(|k|\n                                k.to_string()).collect::<Vec<_>>().join(\", \")).collect::<Vec<_>>().join(\"\\n\")"
---

age, createdAt, id, university, updatedAt



