migrator-tests/tests/snapshots/generate__oneway_migrations-16.snap
---
source: migrator-tests/tests/generate.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "age": "DEFINE FIELD age ON student TYPE int",
        "createdAt": "DEFINE FIELD createdAt ON student TYPE datetime",
        "id": "DEFINE FIELD id ON student TYPE record<student>",
        "university": "DEFINE FIELD university ON student TYPE string",
        "updatedAt": "DEFINE FIELD updatedAt ON student TYPE datetime",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
